# learning_project

./: README.md  extracted_optimized.txt  pyproject.toml
rag_env/: pyvenv.cfg
rag_env/Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu  activate.ps1  activate_this.py
src/core/: agent.py  embeddings.py
src/utils/: parse_pdf.py
tests/: test_parse_pdf.py
