[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "pandas>=3.0.0",
    "pypdf>=6.7.0",
    "pytest>=9.0.2",
    "sentence-transformers>=5.2.2",
    "transformers>=5.1.0",
]

[[tool.uv.index]]
name = "pypi-mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple" 
default = true 
